--- a/package.json
+++ b/package.json
@@ -11,18 +11,27 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
+    "@mui/x-date-pickers": "^6.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bluebird": "^3.7.2",
+    "dayjs": "^1.11.7",
+    "electron-is-dev": "^2.0.0",
+    "electron-pos-printer": "^1.3.6",
+    "final-form": "^4.20.9",
     "node-gyp": "^9.3.1",
     "postinstall": "^0.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-final-form": "^6.5.9",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "sqlite3": "^5.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "postinstall": "electron-builder install-app-deps",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -48,6 +57,7 @@
     "cross-env": "^7.0.3",
     "electron": "^22.2.1",
     "electron-builder": "^23.6.0",
+    "electron-react-devtools": "^0.5.3",
     "electronmon": "^2.0.2",
     "wait-on": "^7.0.1"
   }
