--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "electron-pos-printer": "^1.3.6",
     "final-form": "^4.20.9",
     "node-gyp": "^9.3.1",
+    "path-browserify": "^1.0.1",
     "postinstall": "^0.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,9 +33,9 @@
   },
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "electron:start": "concurrently -k \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electronmon .\""
   },
@@ -55,10 +56,12 @@
   "devDependencies": {
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
+    "customize-cra": "^1.0.0",
     "electron": "^22.2.1",
     "electron-builder": "^23.6.0",
     "electron-react-devtools": "^0.5.3",
     "electronmon": "^2.0.2",
+    "react-app-rewired": "^2.2.1",
     "wait-on": "^7.0.1"
   }
 }
