--- a/package.json
+++ b/package.json
@@ -37,8 +37,39 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "electron:start": "concurrently -k \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electronmon .\""
+    "electron:start": "concurrently -k \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electronmon .\"",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder -w",
+    "dist-linux": "electron-builder -l"
   },
+  "build": {
+    "appId": "com.mvp.app",
+    "productName": "MVPizzeria",
+    "directories": {
+      "buildResources": "assets"
+    },
+    "files": [
+      "build/**/*",
+      "public/electron.js"
+    ],
+    "extraResources": [
+      "db/**/*"
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "assets/icon.ico"
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "assets/icon.icns"
+    },
+    "linux": {
+      "target": "AppImage",
+      "icon": "assets/icon.png"
+    },
+    "asar": true
+  },
+  "pack": "electron-builder",
   "eslintConfig": {
     "extends": [
       "react-app",
