--- a/package.json
+++ b/package.json
@@ -37,10 +37,9 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "electron:start": "concurrently -k \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electronmon .\"",
+    "electron:start": "concurrently -k \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder -w",
-    "dist-linux": "electron-builder -l"
+    "dist": "electron-builder -w"
   },
   "build": {
     "appId": "com.mvp.app",
@@ -53,7 +52,7 @@
       "public/electron.js"
     ],
     "extraResources": [
-      "db/**/*"
+      "database/**/*"
     ],
     "win": {
       "target": "nsis",
