--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-final-form": "^6.5.9",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "smalltalk": "^4.1.1",
     "sqlite3": "^5.1.4",
+    "vex-js": "^4.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
